<resources>
    <string name="app_name">TMSHomeWorkAndroid</string>
    <string name="home_work_1_str">Home Work 1</string>
    <string name="home_work_2_str">Home Work 2</string>
    <string name="home_work_3_str">Home Work 3</string>
    <string name="home_work_4_str">Home Work 4</string>
    <string name="home_work_5_str">Home Work 5</string>
    <string name="home_work_6_str">Home Work 6</string>
    <string name="home_work_7_str">Home Work 7</string>
    <string name="home_work_8_str">Home Work 8</string>
    <string name="home_work_9_str">Home Work 9</string>
    <string name="home_work_10_str">Home Work 10</string>
    <string name="home_work_11_str">Home Work 11</string>
    <string name="home_work_12_str">Home Work 12</string>
    <string name="home_work_13_str">Home Work 13</string>
    <string name="hw1_text_str">My first application on Android</string>
    <string name="loaded_image_str">Loaded image</string>
    <string name="enter_image_url_str">Enter image URL</string>
    <string name="load_image_str">Load image</string>
    <string name="flags_str">Flags</string>
    <string name="animation_str">Animation</string>
    <string name="armenia_str">Armenia</string>
    <string name="austria_str">Austria</string>
    <string name="belgium_str">Belgium</string>
    <string name="latvia_str">Latvia</string>
    <string name="denmark_str">Denmark</string>
    <string name="spain_str">Spain</string>
    <string name="cat_animation_description_str">Cat animation</string>
    <string name="dance_flor_background_description_str">Dance flor background</string>
    <string name="sky_background_description_str">Sky background</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_coffee_str">Add kind of coffee</string>
    <string name="show_all__coffee_str">Show all kind of coffee</string>
    <string name="add_new_kind_of_coffee_str">add new kind of coffee</string>
    <string name="coffee_background_str">Coffee background</string>
    <string name="fill_all_fields">Fill in all the fields!</string>
    <string name="fill_url_fields">Fill in the field with url!</string>
    <string name="coffee_price_str">Coffee price</string>
    <string name="image_url_str">Image url</string>
    <string name="coffee_name_str">Coffee name</string>
    <string name="coffee_image_str">Coffee image</string>
    <string name="activity_background_str">Activity background</string>
    <string name="start_str">Start</string>
    <string name="cancel_str">Cancel</string>
    <string name="winner_str">Winner:</string>
    <string name="zero_ton_str">0 Ton</string>
    <string name="potatoes_str">Potatoes</string>
    <string name="cabbage_str">Cabbage</string>
    <string name="beet_str">Beet</string>
    <string name="minsk_str">Minsk</string>
    <string name="brest_str">Brest</string>
    <string name="vitebsk_str">Vitebsk</string>
    <string name="grodno_str">Grodno</string>
    <string name="gomel_str">Gomel</string>
    <string name="mogilev_str">Mogilev</string>
    <string name="void_str" />
    <string name="background_str">Background</string>
    <string name="user_name_str">User name</string>
    <string name="password_str">Password</string>
    <string name="sign_in_str">Sign in</string>
    <string name="sign_up_str">Sign up</string>v
    <string name="name_must_be_not_empty_str">Name must be not empty"</string>
    <string name="min_password_size_str">Password length must be at least 8 characters</string>
    <string name="ok_str">OK</string>
    <string name="success_str">Success</string>
    <string name="register_message_str">you are register</string>
    <string name="error_str">Error</string>
    <string name="error_message_str">"You are'n register, please try again"</string>
    <string name="s_str">С</string>
    <string name="day_str">Днем</string>
    <string name="mother_str">Матери</string>
    <string name="congratulation_part1_str">Давайте скажем все спасибо Всем нашим мамам дорогим. За нашу жизнь, за наше счастье Мы очень благодарны им.</string>
    <string name="congratulation_part2_str">За трудную, за их работу, Когда воспитывали нас. За нежность, ласку и заботу Спасибо скажем мы сейчас.</string>
    <string name="congratulation_part3_str">В День матери сердца открыты Для самых добрых, теплых слов. Давайте скажем все спасибо Всем нашим мама за любовь!</string>
    <string name="enter_movie_name_str">Enter movie name</string>
    <string name="movie_image_url_str">Movie image url</string>
    <string name="load_str">load</string>
    <string name="movie_director_str">Movie director</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_year_str">Movie year</string>
    <string name="movie_duration_str">Movie duration \'min\'</string>
    <string name="save_str">Save</string>
    <string name="stop_str">Stop</string>
    <string name="get_data">Get data</string>
    <string name="crypto_str">Crypto</string>
    <string name="illumination_value">Illumination value</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add weather</string>
    <string name="nothing">_</string>
    <string name="weather_image">weather image</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="enter_the_number_of_the_fibonacci_number">Enter the number of the fibonacci number</string>
    <string name="enter_number">Enter number</string>
    <string name="calculate">Calculate</string>
</resources>