<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw4.AddCoffeeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/coffee_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/coffee_background_str" />

    <EditText
        android:id="@+id/sort_coffee_et"
        style="@style/MyEditTextStyle"
        android:hint="@string/coffee_name_str"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_iv"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/price_coffee_et"
        style="@style/MyEditTextStyle"
        android:hint="@string/coffee_price_str"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_coffee_et"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/image_url_coffee_et"
        style="@style/MyEditTextStyle"
        android:hint="@string/image_url_str"
        android:inputType="textUri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_coffee_et"
        android:autofillHints="no"/>

    <TextView
        android:id="@+id/show_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/image_url_coffee_et"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_error"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/load_image_btn"
        style="@style/MyMaterialButtonStyle"
        android:layout_marginTop="60dp"
        android:text="@string/load_image_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_url_coffee_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_coffee_btn"
        style="@style/MyMaterialButtonStyle"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_kind_of_coffee_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_image_btn" />

    <ImageView
        android:id="@+id/coffee_iv"
        android:layout_width="@dimen/coffee_iv_width"
        android:layout_height="@dimen/coffee_iv_height"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/coffee_image_str" />

</androidx.constraintlayout.widget.ConstraintLayout>