<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/hw1_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_work_1_str"
        android:onClick="onHw1BtnClick"/>

    <Button
        android:id="@+id/hw2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_work_2_str"/>

    <Button
        android:id="@+id/hw3_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_work_3_str"/>

</LinearLayout>