<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".hw6.HomeWork6Activity">

    <TextView
        android:id="@+id/congratulation_part1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulation_part1_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/congratulation_part2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/congratulation_part2_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/congratulation_part3_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/congratulation_part3_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/flowers_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/background_str"
        android:scaleType="centerInside"
        android:src="@drawable/flowers"
        android:visibility="invisible" />

    <Button
        android:id="@+id/start_animation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/start_str" />
</LinearLayout>