<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeWork1Activity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/loadImageIV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_iv"
        android:contentDescription="@string/loaded_image_str" />

    <EditText
        android:id="@+id/imageUrlET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_et"
        android:layout_marginStart="@dimen/margin_start_et"
        android:layout_marginEnd="@dimen/margin_end_et"
        android:hint="@string/enter_image_url_str"
        android:autofillHints="no"
        android:inputType="textUri" />

    <Button
        android:id="@+id/loadImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_image_str"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_btn"
        android:onClick="loadImageOnClick"/>
</LinearLayout>