<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw2.FlagsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/MyTextVieStyle"
            android:text="@string/armenia_str"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#D32727"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#1B37CD"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#EDC13D"/>

        <TextView
            style="@style/MyTextVieStyle"
            android:text="@string/austria_str"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#F65050">
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_marginTop="40dp"/>
        </LinearLayout>

        <TextView
            style="@style/MyTextVieStyle"
            android:text="@string/belgium_str"/>
        
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:background="#000000"/>
            <View
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:background="#D1C02F"/>
            <View
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:background="#E12E2E"/>
        </LinearLayout>

        <TextView
            style="@style/MyTextVieStyle"
            android:text="@string/latvia_str"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#9C2121">
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:layout_marginTop="60dp"/>
        </LinearLayout>

        <TextView
            style="@style/MyTextVieStyle"
            android:text="@string/denmark_str"/>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#DC2424">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.344"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/MyTextVieStyle"
            android:text="@string/spain_str"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#D52424">

            <View
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="#E8BA31"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>